tests/ui/generics/generic-type-params-forward-mention.stderr
error[E0128]: generic parameter defaults cannot reference parameters before they are declared
  --> $DIR/generic-type-params-forward-mention.rs:2:23
   |
LL | struct Foo<T = Option<U>, U = bool>(T, U);
   |                       ^ cannot reference `U` before it is declared

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0128`.
